[package]
name = "s3kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
hex = "0.4"
integer-encoding = "4"
lru = "0.12"
once_cell = "1.20"
rand = { version = "0.8", features = ["small_rng"] }
ring = "0.17"
rocksdb = "0.22"
serde = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
